# turma-do-gatil-back/src/main/java/br/com/udesc/turma_do_gatil_back/dto/CreateUserRequestDto.java
@@ -1,0 +1,24 @@
+package br.com.udesc.turma_do_gatil_back.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class CreateUserRequestDto {
+
+    @NotBlank(message = "Username é obrigatório")
+    @Size(min = 3, max = 50, message = "Username deve ter entre 3 e 50 caracteres")
+    private String username;
+
+    @NotBlank(message = "Nome é obrigatório")
+    private String name;
+
+    @NotBlank(message = "Password é obrigatório")
+    @Size(min = 6, message = "Password deve ter no mínimo 6 caracteres")
+    private String password;
+}
