# turma-do-gatil-back/src/main/java/br/com/udesc/turma_do_gatil_back/dto/LoginRequestDto.java
@@ -1,0 +1,18 @@
+package br.com.udesc.turma_do_gatil_back.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class LoginRequestDto {
+
+    @NotBlank(message = "Username é obrigatório")
+    private String username;
+
+    @NotBlank(message = "Password é obrigatório")
+    private String password;
+}
