# turma-do-gatil-back/src/main/java/br/com/udesc/turma_do_gatil_back/dto/LoginResponseDto.java
@@ -1,0 +1,15 @@
+package br.com.udesc.turma_do_gatil_back.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class LoginResponseDto {
+
+    private String token;
+    private String username;
+    private String name;
+}
