# turma-do-gatil-back/src/main/java/br/com/udesc/turma_do_gatil_back/dto/UserDto.java
@@ -1,0 +1,19 @@
+package br.com.udesc.turma_do_gatil_back.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.time.LocalDateTime;
+import java.util.UUID;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class UserDto {
+
+    private UUID id;
+    private String username;
+    private String name;
+    private LocalDateTime createdAt;
+}
