# turma-do-gatil-front/src/app/models/auth.model.ts
@@ -1,0 +1,16 @@
+export interface LoginRequest {
+  username: string;
+  password: string;
+}
+
+export interface LoginResponse {
+  token: string;
+  username: string;
+  name: string;
+}
+
+export interface User {
+  username: string;
+  name: string;
+  token: string;
+}
